welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:2: error: ';' expected but ',' found.
	for (p<-1 to 2) {baisseBrosse(); avance(), gauche()}
                                                 ^