welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse() {
	for (p<-1 to 2) {baisseBrosse(); avance(), gauche()}
	 }